yay serif fonts are back in style

--- a/_less/main.less
+++ b/_less/main.less
@@ -158,6 +158,7 @@ h1#draft {
 .album {
   .cover { float: left; margin-right: @padding; }
   .music_info {
+    font-family: @sans;
     padding: @padding*2 0;
     .album_title { font-size: @bigheading; }
     .artist { line-height: 1; }
@@ -166,6 +167,7 @@ h1#draft {
 
 #paginator {
   float: left;
+  font-family: @sans;
   padding-bottom: @padding;
   width: 100%;
   p { .rounded-corners(5px);
