maybe I just like sans. so there

--- a/_less/fonts.less
+++ b/_less/fonts.less
@@ -1,9 +1,9 @@
 @sans: "proxima-nova-1", "proxima-nova-2", sans-serif;
 @serif: "Palatino", "Palatino Linotype" "URW Palladio L", serif;
-@copy: @serif;
+@copy: @sans;
 @display: @sans;
 @code: "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
-@basefont: 14px;
+@basefont: 13px;
 @padding: @basefont * 2;
 @bigheading: @basefont * 2.75;
 @lineheight: @basefont * 2.5;
