--- a/_less/fonts.less
+++ b/_less/fonts.less
@@ -1,5 +1,6 @@
 @sans: "proxima-nova-1", "proxima-nova-2", sans-serif;
 @serif: "Palatino", "Palatino Linotype" "URW Palladio L", serif;
+@fancy: "bello-pro-1","bello-pro-2", @sans;
 @copy: @sans;
 @display: @sans;
 @code: "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
