--- a/_less/main.less
+++ b/_less/main.less
@@ -173,6 +173,7 @@ h1#draft {
   padding-bottom: @padding;
   width: 100%;
   p { .rounded-corners(5px);
+    font-family: @fancy;
     background: @linkcolor;
     color: @bgcolor;
     margin-bottom: @padding;
