--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,3 +1,3 @@
-
-    <link rel="stylesheet" href="/css/main.css" />
-    <script src="/js/all.js"></script>
+<link rel="stylesheet" href="/css/main.css" />
+<script src="http://use.typekit.com/cak6cdh.js"></script>
+<script src="/js/all.js"></script>
