add coderwall (maybe?)

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -15,7 +15,7 @@
       {{ content }}
     </header>
     <footer>
-      Copyright &copy; 2011 Phillip Ridlen.<br/>
+      <p>Copyright &copy; 2011 Phillip Ridlen.</p>
       <ul>
           <li><a href="http://blog.phillipridlen.com">blog</a></li>
         / <li><a href="http://github.com/philtr">github</a></li>
@@ -23,6 +23,7 @@
         / <li><a href="http://forrst.me/philtr">forrst</a></li>
         / <li><a href="http://linkedin.com/in/philtr">linkedin</a></li>
       </ul>
+      {% include coderwall.html %}
     </footer>
   </body>
 </html>
