add callback param back in

--- a/_includes/coderwall.html
+++ b/_includes/coderwall.html
@@ -10,7 +10,7 @@
     */
 
     // Modify with your github identity
-    var coderwallJSONurl ="http://www.coderwall.com/philtr.json";
+    var coderwallJSONurl ="http://www.coderwall.com/philtr.json?callback=?";
     // Dimensions of the badges
     var height = 75;
     var width = 75;
