--- a/_includes/coderwall.html
+++ b/_includes/coderwall.html
@@ -1,49 +1,13 @@
-<div id="coderwall">
+<p id="coderwall">
+  <style>
+    #coderwall img:hover { opacity: 0.8; }
+  </style>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-    <script>
-    /*
-    *  coderwall.js
-    *
-    *  Code to display coderwall.com badges
-    *
-    */
-
-    // Modify with your github identity
-    var coderwallJSONurl ="http://www.coderwall.com/philtr.json?callback=?";
-    // Dimensions of the badges
-    var height = 75;
-    var width = 75;
-
-    $(document).ready(function(){
-
-      $.getJSON(coderwallJSONurl, function(data) {
-
-        $.each(data.data.badges, function(i, item) {
-
-          $("").attr("src", item.badge)
-          .attr("float", "left")
-          .attr("title", item.name + ": " + item.description)
-          .attr("alt", item.name)
-          .attr("height", height)
-          .attr("width", width)
-          .appendTo("#coderwall")
-          .hover(
-            function(){
-              $(this).css("opacity","0.6");
-            },
-            function(){
-              $(this).css("opacity","1.0");
-            }
-          )
-          .click(
-            function(){
-              window.location = "http://www.coderwall.com/philtr/";
-            }
-          );
-        });
-      });
-    });
-    </script>
-
-</div>
+<a href="http://coderwall.com/philtr">
+  <img width="50" src="http://coderwall.com/images/badges/nephilakomaci.png"/>
+  <img width="50" src="http://coderwall.com/images/badges/forked.png"/>
+  <img width="50" src="http://coderwall.com/images/badges/charity.png"/>
+  <img width="50" src="http://coderwall.com/images/badges/mongoose.png"/>
+  <img width="50" src="http://coderwall.com/images/badges/mongoose3.png"/>
+  <img width="50" src="http://coderwall.com/images/badges/cub.png"/>
+</p>
