--- a/css/master.css
+++ b/css/master.css
@@ -74,6 +74,7 @@ html {
       list-style: none;
       display: inline-block;
       padding: 0 3px 0 0; }
+    footer #coderwall img:hover { opacity: 0.8; }
 
 @media all and (max-width: 700px) {
   h1 { font-size: 60px; }
