extract whole header into partial instead of just logotype

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -5,10 +5,10 @@
     {% include libraries.html %}
   </head>
   <body>
-    <header>
-      {% include logotype %}
-      </div>
-      {{ content }}
-    </header>
+    {% include header.html %}
+
+    {{ content }}
+
+    {% include footer.html %}
   </body>
 </html>
