add google analytics

--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" charset="utf-8">
 <script type="text/javascript" src="http://use.typekit.com/cak6cdh.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+{% include analytics.html %}
