add walrus badge

--- a/_includes/coderwall.html
+++ b/_includes/coderwall.html
@@ -1,5 +1,6 @@
 <p id="coderwall">
   <a href="http://coderwall.com/philtr">
+    <img width="50" src="http://coderwall.com/images/badges/walrus.png"/>
     <img width="50" src="http://coderwall.com/images/badges/nephilakomaci.png"/>
     <img width="50" src="http://coderwall.com/images/badges/forked.png"/>
     <img width="50" src="http://coderwall.com/images/badges/charity.png"/>
