SEO title -- yuck

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Phillip Ridlen</title>
+    <title>Phillip Ridlen | Ruby Web Developer &amp; Designer in Fort Worth, Texas</title>
     {% include libraries.html %}
   </head>
   <body>
