--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
-<header>
-  <div id="home"><a href="http://phillipridlen.com">&larr; <img id="pr" src="/img/phillipridlen.png" /></a>
-  <h1 id="title"><a href="/"><span class="p">Phillip&rsquo;s Blog</span> <span class="f">The</span> Notes, Quotes, <span class="f">and</span> Other Miscellany<br/><span class="f">of</span> Phillip T. Ridlen</a></h1>
+<header id="header-main">
+  <div id="header-main-inner">
+    <div id="home"><a href="http://phillipridlen.com">&larr; Phillip Ridlen</a></div>
+    <h1 id="title"><a href="/">The Blog</a></h1>
+  </div>
 </header>
 
 <div id="notice">
