--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,9 @@
 
     {% include header.html %}
 
-    {{ content }}
+    <section id="content">
+      {{ content }}
+    </section>
 
     {% include footer.html %}
 
