--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,15 @@
 .dividerBottom{border-bottom:1px solid #e6e6e6;margin-bottom:26px;padding-bottom:26px;}
 .dividerTop{border-top:1px solid #e6e6e6;margin-top:26px;padding-top:26px;}
 html{margin:0;padding:0;}
-body{background:#ffffff;color:#555555;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:13px;line-height:32.5px;margin:39px auto;max-width:550px;padding:0 20px 0 60px;}
+body{background:#ffffff;color:#555555;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:13px;line-height:32.5px;margin:0;padding:0;}
+header#header-main{background:#264e59;color:#ffffff;height:35px;}header#header-main a{color:#ffffff;}
+header#header-main #home{font-family:"bello-pro-1","bello-pro-2","proxima-nova-1","proxima-nova-2",sans-serif;font-size:14.3px;float:left;margin-top:3px;}
+header#header-main #header-main-inner{max-width:800px;margin:0 auto;}header#header-main #header-main-inner h1{float:right;font-size:14.3px;text-transform:uppercase;margin-top:10px;}
 header a{text-decoration:none;}
+section#content{clear:both;margin:39px auto;max-width:800px;padding:0 20px 0 60px;}
 h1{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;line-height:1;font-size:39px;}h1 a{text-decoration:none;}
-h2{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;line-height:1;font-size:26.130000000000003px;}h2 a{text-decoration:none;}
-h3{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;line-height:1;font-size:19.5px;}h3 a{text-decoration:none;}
+h2{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;line-height:1;font-size:19.5px;}h2 a{text-decoration:none;}
+h3{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;line-height:1;font-size:15.600000000000001px;}h3 a{text-decoration:none;}
 p{margin:0 0 13px 0;}
 a{-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;color:#264e59;}a:hover{color:#e71a5d;}
 a img{border:0;}
@@ -18,7 +22,7 @@ pre code{background:none;padding:0;}
 code{background:#f7f7f7;font-family:"Inconsolata","Consolas","Menlo","Monaco",monospace;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;font-size:12px;padding:2px;}
 blockquote{border-left:1px solid #ddd;color:#888888;margin-left:13px;padding-left:13px;}blockquote code{font-style:normal;}
 article{border-bottom:1px solid #e6e6e6;margin-bottom:26px;padding-bottom:26px;}article h2{margin-bottom:0;padding-bottom:0;}
-article time{color:#777777;display:block;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:19.5px;font-weight:100;letter-spacing:0;margin-bottom:13px;}
+article time{color:#777777;display:block;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:13px;font-weight:100;letter-spacing:0;margin-bottom:13px;}
 article p:last-child{margin-bottom:0;}
 article:last-child{border-bottom:none;margin-bottom:0;}
 article aside{border-top:1px solid #e6e6e6;margin-top:26px;padding-top:26px;border-bottom:1px solid #e6e6e6;margin-bottom:26px;padding-bottom:26px;color:#888888;font-family:"Palatino","Palatino Linotype" "URW Palladio L",serif;font-style:italic;font-weight:100;}
@@ -32,12 +36,7 @@ article.music:before{content:url('/img/music.png');}
 article.photo:before{content:url('/img/photo.png');}
 article.quote:before{content:url('/img/quote.png');}
 article.video:before{content:url('/img/video.png');}
-footer{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:13px;clear:both;}footer a{text-decoration:none;}
-img#pr{position:relative;top:6px;}
-h1#title{font-size:23.4px;margin:52px 0 78px 0;text-align:center;}h1#title img{float:left;margin-left:-100px;}
-h1#title a:hover{background-color:#ffffff;}
-h1#title .p{border-bottom:1px solid #e6e6e6;margin-bottom:26px;padding-bottom:26px;color:#264e59;display:block;font-size:78px;font-weight:700;letter-spacing:-4px;margin-bottom:11px;padding-bottom:9px;text-transform:uppercase;}
-h1#title .f{color:#777777;font-family:"Palatino","Palatino Linotype" "URW Palladio L",serif;font-size:15.600000000000001px;font-style:italic;font-weight:100;text-transform:lowercase;}h1#title .f .a{color:#777777;}
+footer{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:13px;clear:both;margin:39px auto;max-width:800px;padding:0 20px 0 60px;}footer a{text-decoration:none;}
 h1#draft{color:#999999;float:left;font-size:200px;line-height:0;margin:150px 0 -200px -525px;-moz-text-shadow:-3px 2px 1px #ffffff;-webkit-text-shadow:-3px 2px 1px #ffffff;text-shadow:-3px 2px 1px #ffffff;text-transform:uppercase;-webkit-transform:rotate(-90deg);-moz-transform:rotate(-90deg);transform:rotate(-90deg);}
 #posts{border-bottom:1px solid #e6e6e6;margin-bottom:26px;padding-bottom:26px;padding-bottom:0;}
 #post article{padding-bottom:0;}
