update the style just a lil bit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>{% if page.title %}{{ page.title }} | {% endif %}Phillip's Notes, Quotes, and Other Miscellany</title>
+    <title>{% if page.title %}{{ page.title }} | {% endif %}Phillip Ridlen's Blog</title>
     <link href="http://feeds.feedburner.com/philtrblog" rel="alternate" title="Phillip's Blog" type="application/atom+xml" />
 
     {% include libraries.html %}
