add commit ref to styleshet

--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,3 +1,3 @@
-<link rel="stylesheet" href="/css/main.css" />
+<link rel="stylesheet" href="/css/main.css?d597ceaeeebc7779e872" />
 <script src="http://use.typekit.com/cak6cdh.js"></script>
 <script src="/js/all.js"></script>
