add viewport meta

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Phillip Ridlen | Ruby Web Developer &amp; Designer in Fort Worth, Texas</title>
+    <meta name="viewport" content="initial-scale=0.8"/>
     {% include libraries.html %}
   </head>
   <body>
