tighten line height for smaller viewport

--- a/_less/main.less
+++ b/_less/main.less
@@ -224,6 +224,8 @@ h1#draft {
   color: @textcolor; }
   
 @media all and (max-width: 700px) {
+  body {
+    line-height: @lineheight/2  }
   #header-main-inner {
     padding: 0 20px;  }
   section#content {
