tighten line height overall

--- a/_less/main.less
+++ b/_less/main.less
@@ -225,7 +225,7 @@ h1#draft {
   
 @media all and (max-width: 700px) {
   body {
-    line-height: @lineheight/2  }
+    line-height: @lineheight*.75  }
   #header-main-inner {
     padding: 0 20px;  }
   section#content {
