--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 .dividerBottom{border-bottom:1px solid #e6e6e6;margin-bottom:28px;padding-bottom:28px;}
 .dividerTop{border-top:1px solid #e6e6e6;margin-top:28px;padding-top:28px;}
 html{margin:0;padding:0;}
-body{background:#ffffff;color:#555555;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:14px;line-height:35px;margin:0;padding:0;}
+body{background:#ffffff;color:#555555;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:14px;line-height:1.75;margin:0;padding:0;}
 header#header-main{background:#264e59;color:#ffffff;height:35px;}header#header-main a{color:#ffffff;}
 header#header-main #home{font-family:"bello-pro-1","bello-pro-2","proxima-nova-1","proxima-nova-2",sans-serif;font-size:15.400000000000002px;float:left;margin-top:3px;}
 header#header-main #header-main-inner{max-width:700px;margin:0 auto;}header#header-main #header-main-inner h1{float:right;font-size:15.400000000000002px;text-transform:uppercase;margin-top:10px;}
@@ -58,4 +58,4 @@ h1#draft{color:#999999;float:left;font-size:200px;line-height:0;margin:150px 0 -
 #archive{border-bottom:1px solid #e6e6e6;margin-bottom:28px;padding-bottom:28px;float:left;width:100%;}#archive dt{clear:left;float:left;}
 #archive dd{float:left;margin-left:1ex;}
 #notice{-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;background:#ffe;border:1px solid #eed;display:none;padding:14px;color:#555555;}
-@media all and (max-width: 700px){body{line-height:17.5px;} #header-main-inner{padding:0 20px;} section#content{padding:0 20px;} article::before{display:none;}}
+@media all and (max-width: 700px){body{line-height:1.3125;} #header-main-inner{padding:0 20px;} section#content{padding:0 20px;} article::before{display:none;}}
