--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -3,11 +3,15 @@
   <head>
     <title>Phillip Ridlen | Ruby Web Developer &amp; Designer in Fort Worth, Texas</title>
     <meta name="viewport" content="initial-scale=0.8"/>
-    {% include libraries.html %}
+    <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" charset="utf-8">
+    {% include libraries/typekit.html %}
   </head>
   <body>
-    {% include header.html %}
-    {{ content }}
-    {% include footer.html %}
+    <section id="container">
+      {% include header.html %}
+      {{ content }}
+      {% include footer.html %}
+    </section>
+    {% include libraries.html %}
   </body>
 </html>
