add event tracking to outbound links

--- a/_includes/libraries/analytics.html
+++ b/_includes/libraries/analytics.html
@@ -11,3 +11,12 @@
   })();
 
 </script>
+
+<script>
+  $(function() {
+    $('a.exit').click(function() {
+      _gaq.push(['_trackEvent', 'Exit', 'Link', $(this).html()]);
+    });
+  });
+
+</script>
