--- a/_includes/libraries/fittext.html
+++ b/_includes/libraries/fittext.html
@@ -1,4 +1,6 @@
 <script src="/js/jquery.fittext.js"></script>
 <script>
-  $("h1").fitText(0.6);
+  $(function() {
+    $("h1").fitText(0.6);
+  });
 </script>
