--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer>
   <p>Copyright &copy; 2011 Phillip Ridlen.</p>
   <ul>
-      <li><a href="http://blog.phillipridlen.com">blog</a></li>
-    / <li><a href="http://github.com/philtr">github</a></li>
-    / <li><a href="http://twitter.com/philtr">twitter</a></li>
-    / <li><a href="http://forrst.me/philtr">forrst</a></li>
-    / <li><a href="http://linkedin.com/in/philtr">linkedin</a></li>
+      <li><a href="http://blog.phillipridlen.com" class="exit">blog</a></li>
+    / <li><a href="http://github.com/philtr" class="exit">github</a></li>
+    / <li><a href="http://twitter.com/philtr" class="exit">twitter</a></li>
+    / <li><a href="http://forrst.me/philtr" class="exit">forrst</a></li>
+    / <li><a href="http://linkedin.com/in/philtr" class="exit">linkedin</a></li>
   </ul>
 </footer>
