--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -4,7 +4,7 @@
     <title>Phillip Ridlen | Ruby Web Developer &amp; Designer in Fort Worth, Texas</title>
     <meta name="viewport" content="initial-scale=0.8"/>
     <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" charset="utf-8">
-    {% include libraries/typekit.html %}
+    {% include scripts/typekit.html %}
   </head>
   <body>
     <section id="container">
@@ -12,6 +12,6 @@
       {{ content }}
       {% include footer.html %}
     </section>
-    {% include libraries.html %}
+    {% include scripts.html %}
   </body>
 </html>
