move analytics to <head>

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=0.8"/>
     <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" charset="utf-8">
     {% include scripts/typekit.html %}
+    {% include scripts/analytics.html %}
   </head>
   <body>
     <section id="container">
