--- a/css/master.css
+++ b/css/master.css
@@ -1,7 +1,8 @@
 html {
-  background: #FFF;
+  background: #f5f5f5 url(/images/bg.gif);
   color: #555;
   font: 300 14px/18px "proxima-nova-1","proxima-nova-2",sans-serif;
+  text-shadow: 0px 1px #fff;
   height: 100%;
   margin: 0;
   width: 100%; }
