--- a/css/master.css
+++ b/css/master.css
@@ -52,17 +52,41 @@ html {
     button {
       clear: both;
       float: left;
-      padding: 5px 10px 0 10px;
-      color: #5C6058;
       cursor: pointer;
-      border: 1px solid #D4D4D4;
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      border-radius: 5px;
-      background: #F4F4F4;
-      filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#F4F4F4',endColorstr='#EAECDF');
-      background: -webkit-gradient(linear,left top,left bottom,from(#F4F4F4),to(#EAECDF));
-      background: -moz-linear-gradient(top,#F4F4F4,#EAECDF); }
+      display: inline-block;
+      background-color: #e6e6e6;
+      background-repeat: no-repeat;
+      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(25%, #ffffff), to(#e6e6e6));
+      background-image: -webkit-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+      background-image: -moz-linear-gradient(top, #ffffff, #ffffff 25%, #e6e6e6);
+      background-image: -ms-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+      background-image: -o-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+      background-image: linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
+      padding: 5px 14px 6px;
+      text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+      color: #333;
+      font-size: 13px;
+      line-height: normal;
+      border: 1px solid #ccc;
+      border-bottom-color: #bbb;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+      -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+      -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+      -webkit-transition: 0.1s linear all;
+      -moz-transition: 0.1s linear all;
+      -ms-transition: 0.1s linear all;
+      -o-transition: 0.1s linear all;
+      transition: 0.1s linear all; }
+      button:hover {
+        background-position: 0 -15px;
+        color: #333;
+        text-decoration: none; }
+      button:focus {
+        outline: 1px dotted #666; }
 
     footer {
       clear: left;
