Doing my part for Internet censorship

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,4 @@
 {% include scripts/jquery.html %}
 {% include scripts/fittext.html %}
+{% include scripts/censorship.html %}
 {% include scripts/analytics.html %}
