--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -4,6 +4,7 @@
     <title>Phillip Ridlen | Ruby Web Developer &amp; Designer in Fort Worth, Texas</title>
     <meta name="viewport" content="initial-scale=0.8"/>
     <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" charset="utf-8">
+    <script type="text/javascript">var a=new Date,b=a.getHours()+a.getTimezoneOffset()/60;if(18==a.getDate()&&0==a.getMonth()&&2012==a.getFullYear()&&13<=b&&24>=b)window.location="http://sopastrike.com/strike";</script>
     {% include scripts/typekit.html %}
   </head>
   <body>
