--- a/_less/main.less
+++ b/_less/main.less
@@ -129,12 +129,12 @@ article { .dividerBottom;
     float: left;
     margin-left: -48px;
     margin-top: 8px; }
-  &.blog:before  { content: url('/img/blog.png'); }
-  &.link:before  { content: url('/img/link.png'); }
-  &.music:before  { content: url('/img/music.png'); }
-  &.photo:before { content: url('/img/photo.png'); }
-  &.quote:before { content: url('/img/quote.png'); }
-  &.video:before { content: url('/img/video.png'); }}
+  &.blog:before  { content: url('/notes/img/blog.png'); }
+  &.link:before  { content: url('/notes/img/link.png'); }
+  &.music:before  { content: url('/notes/img/music.png'); }
+  &.photo:before { content: url('/notes/img/photo.png'); }
+  &.quote:before { content: url('/notes/img/quote.png'); }
+  &.video:before { content: url('/notes/img/video.png'); }}
   
 footer { 
   font-family: @sans;
