--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,3 +1,3 @@
-<link rel="stylesheet" href="/css/main.css?bd2e990245340ba2feea" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" />
 <script src="http://use.typekit.com/cak6cdh.js"></script>
-<script src="/js/all.js"></script>
+<script src="{{ site.baseurl }}/js/all.js"></script>
