--- a/css/main.css
+++ b/css/main.css
@@ -30,12 +30,12 @@ article aside+aside{border-top:none;margin-top:0;padding-top:0;}
 article.photo img{width:100%;}
 article.video iframe{height:400px;width:550px;}
 article:before{float:left;margin-left:-48px;margin-top:8px;}
-article.blog:before{content:url('/img/blog.png');}
-article.link:before{content:url('/img/link.png');}
-article.music:before{content:url('/img/music.png');}
-article.photo:before{content:url('/img/photo.png');}
-article.quote:before{content:url('/img/quote.png');}
-article.video:before{content:url('/img/video.png');}
+article.blog:before{content:url('/notes/img/blog.png');}
+article.link:before{content:url('/notes/img/link.png');}
+article.music:before{content:url('/notes/img/music.png');}
+article.photo:before{content:url('/notes/img/photo.png');}
+article.quote:before{content:url('/notes/img/quote.png');}
+article.video:before{content:url('/notes/img/video.png');}
 footer{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:14px;clear:both;margin:42px auto;max-width:700px;padding:0 20px 0 60px;}footer a{text-decoration:none;}
 h1#draft{color:#999999;float:left;font-size:200px;line-height:0;margin:150px 0 -200px -525px;-moz-text-shadow:-3px 2px 1px #ffffff;-webkit-text-shadow:-3px 2px 1px #ffffff;text-shadow:-3px 2px 1px #ffffff;text-transform:uppercase;-webkit-transform:rotate(-90deg);-moz-transform:rotate(-90deg);transform:rotate(-90deg);}
 #posts{border-bottom:1px solid #e6e6e6;margin-bottom:28px;padding-bottom:28px;padding-bottom:0;}
