Quick refactor and increase container max-width to 1000px

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="header-main">
   <div id="header-main-inner">
     <div id="home"><a href="http://phillipridlen.com">&larr; Phillip Ridlen</a></div>
-    <h1 id="title"><a href="{{ site.baseurl }}/">The Blog</a></h1>
+    <h1 id="title"><a href="/">The Blog</a></h1>
   </div>
 </header>
 
