--- a/_includes/sadface.html
+++ b/_includes/sadface.html
@@ -4,7 +4,7 @@
     #content { width: 600px; margin: 0 auto; text-align: left; }
     #sadface { font-size: 400px; line-height: 1.2em; }
   </style>
-  <h1><a href="{{ site.baseurl }}/">Phillip's Blog</a></h1>
+  <h1><a href="/">Phillip's Blog</a></h1>
   <h2>The notes, quotes, and other miscellany of Phillip T. Ridlen</h2>
   <div id="sadface">:'(</div>
   <p><strong>WARNING:</strong> The site below may look terrible. I encourage you to upgrade to one of these standards-compliant browsers:</p>
