--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -4,7 +4,7 @@ layout: post
 <div class="album">
   <div class="cover">
     <a href="{{ page.album_url }}">
-      <img src="{{ site.baseurl }}/photos/music/{{ page.cover }}.png" />
+      <img src="/photos/music/{{ page.cover }}.png" />
     </a>
   </div>
   <div class="music_info">
