--- a/_less/main.less
+++ b/_less/main.less
@@ -1,6 +1,7 @@
 @import url(colors.less);
 @import url(fonts.less);
 @import url(mixins.less);
+@import url(pygments.less);
 
 @content-width: 1000px;
 
