--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
   <p>Original content is <a
   href="http://creativecommons.org/licenses/by-nc/3.0/" title="Creative Commons
   Attribution-NonCommercial 3.0">Creative Commons <img id="license"
-  src="/img/cc-by-nc.png" alt="CC-BY-NC 3.0" /></a> 2010-2011 Phillip T.
+  src="{{ site.base-url }}/img/cc-by-nc.png" alt="CC-BY-NC 3.0" /></a> 2010-2011 Phillip T.
   Ridlen.</p>
-  <p><a href="/archive/">Archive</a> | <a href="http://feeds.feedburner.com/philtrblog"><img id="rss" src="/img/rss.png"/> RSS</a></p>
+  <p><a href="{{ site.base-url }}/archive/">Archive</a> | <a href="http://feeds.feedburner.com/philtrblog"><img id="rss" src="{{ site.base-url }}/img/rss.png"/> RSS</a></p>
   <p>{% include search.html %}</p>
 </footer>
